--- a/style.css
+++ b/style.css
@@ -26,9 +26,69 @@ body
 {
     height: 1300px;
     width: 400px;
-    background-color: rgb(242, 242, 242);
+    /* Background pattern from Toptal Subtle Patterns */
+    background-image: url("./hexellence.png");
     float: left;
+    font-size: 20px;
 }
+#container
+{
+    background-color: white;
+    width: 250px;
+    padding: 25px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+    -webkit-box-shadow: 4px 4px 30px 5px rgba(204,204,204,0.9);
+-moz-box-shadow: 4px 4px 30px 5px rgba(204,204,204,0.9);
+box-shadow: 4px 4px 30px 5px rgba(204,204,204,0.9);
+}
+input[type=text],
+input[type=password]
+{
+    width: 250px;
+    background-color: #efefef;
+    color: #666;
+    border: 2px solid #ddd;
+    border-radius: 5px;
+    font-size: 20px;
+    padding: 5px;
+    box-sizing: border-box;
+    outline: none;
+    
+}
+input[type=text]:focus,
+input[type=password]:focus
+{
+    -webkit-box-shadow: 0px 0px 10px 2px rgba(204,204,204,0.9);
+-moz-box-shadow: 0px 0px 10px 2px rgba(204,204,204,0.9);
+box-shadow: 0px 0px 10px 2px rgba(204,204,204,0.9);
+    border: 2px solid #badc6f;
+    background-color: #e1f0c1;
+    color: green;
+}
+
+input[type=submit]
+{
+    background-color: yellowgreen;
+    width: 250px;
+    font-size: 20px;
+    color: white;
+    padding: 15px 10px;
+    margin-top: 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    letter-spacing: 2px;
+    outline: none;
+    
+
+}
+input[type=submit]:hover
+{
+    background-color: #b8dc6f;
+}
+
 .right
 {
     height: 1300px;
